--- a/04_p5js-electron/settings.json
+++ b/04_p5js-electron/settings.json
@@ -1,6 +1,6 @@
 {
     "cameraChoice": "C920",
-    "cameraChoiceOptions": "Logitech | FaceTime | USB | C920", 
+    "cameraChoiceOptions": "Logi | FaceTime | USB | C920", 
     "cameraWidth": 1280, 
     "cameraHeight": 720,
 
